<?xml version="1.0"?>
<resources>
    <string name="bt_form_hint_card_number">Card Number</string>
    <string name="bt_form_hint_expiration">Expiration</string>
    <string name="bt_form_hint_cvv">CVV</string>
    <string name="bt_form_hint_postal_code">Postal Code</string>

    <string name="bt_default_action_label">Purchase</string>
</resources>
