<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_form_root"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <com.braintreepayments.api.dropin.view.LoadingHeader
        android:id="@+id/bt_header_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bt_header_container_height"
        android:layout_alignParentTop="true"
        android:visibility="gone" />

    <ScrollView
        tools:ignore="UnusedAttribute"
        android:id="@+id/bt_form_scroll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_header_container"
        android:layout_alignWithParentIfMissing="true"
        android:layout_above="@id/bt_card_form_submit_button"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/bt_payment_description" />

            <fragment android:name="com.braintreepayments.api.PaymentButton"
                android:id="@+id/bt_payment_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bt_form_padding" />

            <TextView
                style="@style/bt_base_textview_bold"
                android:id="@+id/bt_card_form_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bt_form_padding"
                android:layout_marginLeft="@dimen/bt_form_padding"
                android:layout_marginRight="@dimen/bt_form_padding"
                android:text="@string/bt_form_pay_with_card_header"
                android:textColor="@color/bt_black"
                android:layout_marginBottom="4dp" />

            <View
                android:id="@+id/bt_card_form_header_bar"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/bt_form_padding"
                android:layout_marginRight="@dimen/bt_form_padding"
                android:layout_marginBottom="8dp"
                android:background="@color/bt_black" />

            <com.braintreepayments.cardform.view.CardForm
                android:id="@+id/bt_card_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="14dp" />

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/bt_form_submit_button" />

</RelativeLayout>
